--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "ut-codec",
-  "version": "5.16.0",
+  "name": "ut-codec-8583",
+  "version": "6.0.0",
   "main": "./index.js",
   "dependencies": {
-    "browser-process-hrtime": "0.1.2",
-    "iconv-lite": "0.4.15",
-    "lodash.assign": "4.2.0",
-    "lodash.invert": "4.3.0",
-    "lodash.isempty": "4.4.0",
-    "lodash.isobject": "3.0.2",
     "lodash.merge": "4.6.0",
-    "lodash.omit": "4.5.0",
-    "ut-bitsyntax": "^6.0.7",
-    "ut-error": "^5.4.0",
-    "blue-tape": "0.2.0"
+    "ut-bitsyntax": "^6.0.15",
+    "ut-emv": "6.0.0",
+    "ut-error": "^5.4.9"
   },
   "devDependencies": {
     "adiff": "0.2.13",
-    "ut-tools": "^5.14.4"
+    "ut-tools": "^5.23.2"
   },
   "scripts": {
     "lint": "ut-lint .",
@@ -41,7 +34,7 @@
   "description": "UT codec module.",
   "repository": {
     "type": "git",
-    "url": "git@github.com:softwaregroup-bg/ut-codec.git"
+    "url": "git@github.com:softwaregroup-bg/ut-codec-8583.git"
   },
   "license": "Apache-2.0"
 }
