--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ut-codec-iso8583",
-  "version": "6.1.11",
+  "version": "6.2.0-rc-einstein.2",
   "main": "./index.js",
   "dependencies": {
     "lodash.merge": "4.6.0",
@@ -22,6 +22,7 @@
     "precommit": "ut-precommit",
     "prepublish": "ut-prepublish",
     "prepush": "ut-prepush",
+    "precover": "ut-precover",
     "pretest": "ut-pretest",
     "preversion": "ut-preversion",
     "test": "ut-test",
