--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ut-codec-iso8583",
-  "version": "6.3.0-rc-godfather.0",
+  "version": "6.3.0",
   "main": "./index.js",
   "dependencies": {
     "lodash.merge": "4.6.0",
