--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,23 @@
         "version": "0.2.0",
         "configurations": [
             {
-                "type": "node",
-                "request": "launch",
-                "name": "Launch Program",
-                "program": "${file}"
+            "type": "node",
+            "request": "launch",
+            "name": "unit test",
+            "program": "${workspaceFolder}/test/unit/cases/encode.js",
+            "runtimeArgs": [
+                "--preserve-symlinks",
+                "--nolazy",
+                "--max_old_space_size=500000"
+            ],
+            "linux": {
+                "outputCapture": "std",
+                "protocol": "inspector"
+            },
+            "windows": {
+                "outputCapture": "std",
+                "protocol": "inspector"
             }
+        }
         ]
     }
