--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "7.0.0-rc-dss.3",
   "main": "./index.js",
   "dependencies": {
-    "lodash.merge": "4.6.1",
+    "lodash": "^4.17.11",
+    "lodash.merge": "^4.6.1",
     "ut-bitsyntax": "^6.0.17",
-    "ut-emv": "^7.0.0-rc-dss.0"
+    "ut-emv": "^7.0.0-rc-dss.2",
+    "ut-unittest": "^1.0.3"
   },
   "devDependencies": {
     "tap": "^12.0.1",
