--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "7.0.0-rc-dss.4",
   "main": "./index.js",
   "dependencies": {
-    "lodash": "^4.17.11",
-    "lodash.merge": "^4.6.1",
+    "lodash.merge": "4.6.1",
     "ut-bitsyntax": "^6.0.17",
-    "ut-emv": "^7.0.0-rc-dss.2",
-    "ut-unittest": "^1.0.3"
+    "ut-emv": "^7.0.0-rc-dss.2"
   },
   "devDependencies": {
     "tap": "^12.5.2",
-    "ut-tools": "^6.6.2"
+    "ut-unittest": "^1.1.0",
+    "ut-tools": "^6.11.0"
   },
   "scripts": {
     "lint": "ut-lint .",
