--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "ut-emv": "^7.0.0-rc-dss.5"
   },
   "devDependencies": {
-    "tap": "^12.5.2",
-    "ut-unittest": "^1.1.0",
-    "ut-tools": "^6.11.0"
+    "tap": "^12.7.0",
+    "ut-tools": "^6.11.0",
+    "ut-unittest": "^1.1.0"
   },
   "scripts": {
     "lint": "ut-lint .",
