--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "lodash.merge": "4.6.1",
     "ut-bitsyntax": "^6.2.1",
-    "ut-emv": "^7.0.0-rc-dss.5"
+    "ut-emv": "^7.0.0-rc-dss.5",
+    "ut-function.template": "^1.3.1"
   },
   "devDependencies": {
     "tap": "^12.7.0",
