--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "7.0.0-rc-dss.12",
   "main": "./index.js",
   "dependencies": {
-    "lodash.merge": "4.6.1",
+    "lodash.merge": "4.6.2",
     "ut-bitsyntax": "^6.2.1",
     "ut-emv": "^7.0.0-rc-dss.5",
-    "ut-function.template": "^1.3.1"
+    "ut-function.template": "1.3.1"
   },
   "devDependencies": {
     "tap": "^12.7.0",
