--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "lodash.merge": "4.6.2",
     "ut-bitsyntax": "^6.2.1",
     "ut-emv": "^7.0.0-rc-dss.5",
-    "ut-function.template": "1.3.1"
+    "ut-function.template": "^1.3.1"
   },
   "devDependencies": {
     "tap": "^12.7.0",
-    "ut-tools": "^6.11.0",
+    "ut-tools": "^6.24.7",
     "ut-unittest": "^1.1.0"
   },
   "scripts": {
