--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "lodash.merge": "4.6.2",
     "ut-bitsyntax": "^6.2.3",
-    "ut-emv": "^7.0.0-rc-dss.5",
-    "ut-function.template": "^1.3.1"
+    "ut-emv": "7.0.1",
+    "ut-function.template": "^1.4.0"
   },
   "devDependencies": {
     "tap": "^12.7.0",
