chore: version bump

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "lodash.merge": "4.6.2",
     "ut-bitsyntax": "^6.2.3",
-    "ut-emv": "7.0.1",
+    "ut-emv": "^7.0.1",
     "ut-function.template": "^1.4.0"
   },
   "devDependencies": {
     "tap": "^12.7.0",
-    "ut-tools": "^6.25.2",
+    "ut-tools": "^6.25.3",
     "ut-unittest": "^1.1.0"
   },
   "scripts": {
