Major/rc dss (#24)
* fix: ut-error deprecations (#9)

* fix: improve frame logging

* fix: trace before potential throw

* [ci-skip][ci skip] version incremented to 6.3.0-rc-godfather.0

* fix: branch

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.0

* tests: upgrade ut-tools

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.1

* fix: upgrade ut-bitsyntax

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.2

* tests: upgrade tap

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.3

* Feat: Add raw data to msg for mac verify.

* fix: cleanup

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.4

* WIP: develop test cases

* Test proper data encoding

* Unit tests for ISO8583 codec

* test: tap version

* fix: dependencies

* Fix: BCD len configurable with prefixFactor.

* Fix: Lint.

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.5

* fix: version bump

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.6

* fix: do not mess with given stan

* fix: configurable success response identifier

* fix: version bump

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.7

* fix: non mandatory DE39 should not result in error mtid

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.8

* fix: configurable mask fields

* fix: mask fields encoding

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.9

* chore: expired certificate

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.10

* fix: allow emv parser overwrite when extending codec

* fix: allow passing emvParser through config

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.11

* Feat: Configurable network field and mtid route maping.

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.12

* feat: allow configuration of fields to be used as trace

* [ci-skip][ci skip] version incremented to 7.0.0-rc-dss.13

* feat: PS-128 (#20)

* feat: PS-128

--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "ut-codec-iso8583",
-  "version": "6.2.1",
+  "version": "7.0.0-rc-dss.14",
   "main": "./index.js",
   "dependencies": {
-    "lodash.merge": "4.6.1",
-    "ut-bitsyntax": "^6.0.17",
-    "ut-emv": "^6.1.2"
+    "lodash.merge": "4.6.2",
+    "ut-bitsyntax": "^6.2.3",
+    "ut-emv": "^7.0.1",
+    "ut-function.template": "^1.4.0"
   },
   "devDependencies": {
-    "ut-tools": "^5.29.14"
+    "tap": "^12.7.0",
+    "ut-tools": "^6.25.3",
+    "ut-unittest": "^1.1.0"
   },
   "scripts": {
     "lint": "ut-lint .",
     "release": "ut-release",
     "changelog": "ut-changelog",
     "check": "ut-check",
-    "cover": "ut-cover",
+    "cover": "ut-cover-parallel",
     "lint-js": "ut-lint-js .",
     "postpublish": "ut-postpublish",
     "postversion": "ut-postversion",
@@ -25,7 +28,7 @@
     "precover": "ut-precover",
     "pretest": "ut-pretest",
     "preversion": "ut-preversion",
-    "test": "ut-test",
+    "test": "ut-test-parallel",
     "version": "ut-version",
     "jenkins": "ut-jenkins",
     "gitlab": "ut-gitlab"
