--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,51 @@
         "version": "0.2.0",
         "configurations": [
             {
-                "type": "node",
-                "request": "launch",
-                "name": "Launch Program",
-                "program": "${file}"
+            "type": "node",
+            "request": "launch",
+            "name": "Single test",
+            "program": "${workspaceFolder}/test/unit/cases/encoding.js",
+            "runtimeArgs": [
+                "--preserve-symlinks",
+                "--nolazy",
+                "--max_old_space_size=500000"
+            ],
+            "linux": {
+                "outputCapture": "std",
+                "protocol": "inspector"
+            },
+            "windows": {
+                "outputCapture": "std",
+                "protocol": "inspector"
             }
+        },
+        {
+            "name": "Unit tests",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceRoot}/node_modules/tap/bin/run.js",
+            "stopOnEntry": false,
+            "args": [
+                "-J",
+                "-T",
+                "--node-arg=--preserve-symlinks",
+                "test/unit/cases"
+            ],
+            "cwd": "${workspaceRoot}",
+            "preLaunchTask": null,
+            "runtimeExecutable": null,
+            "runtimeArgs": [
+                "--nolazy"
+            ],
+            "env": {
+                "UT_ENV": "test",
+                "NODE_PATH": "${workspaceRoot}/dev"
+            },
+            "sourceMaps": false,
+            "outputCapture": "std",
+            "linux": {
+                "protocol": "inspector"
+            }
+        }
         ]
     }
