--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "node",
             "request": "launch",
             "name": "Single test",
-            "program": "${workspaceFolder}/test/unit/cases/encoding.js",
+            "program": "${workspaceFolder}/test/encoding.js",
             "runtimeArgs": [
                 "--preserve-symlinks",
                 "--nolazy",
@@ -30,7 +30,7 @@
                 "-J",
                 "-T",
                 "--node-arg=--preserve-symlinks",
-                "test/unit/cases"
+                "test"
             ],
             "cwd": "${workspaceRoot}",
             "preLaunchTask": null,
